--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,3 +1,6 @@
+#ignorar
+
+
 # Created by .ignore support plugin (hsz.mobi)
 ### Node template
 # Logs
@@ -88,3 +91,4 @@ sw.*
 
 # Vim swap files
 *.swp
+
