--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 frontend/node_modules
-backend/db/__pycache__
+backend/db/__pycache__/
+backend/__pycache__/
 backend/venv
+backend/db/credenciales.py
+**/__pycache__/
+*.log
+*.pot
+*.pyc
+*/*/*/__pycache__/
+*/*/__pycache__/
+*/__pycache__/
