--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-leaflet": "^0.0.27",
+    "read-excel-file": "^5.2.25",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
