--- a/nginx/dev.conf
+++ b/nginx/dev.conf
@@ -1,8 +1,8 @@
 server {
-  listen 8080;
+  listen 8079;
 
   location / {
-    proxy_pass        http://frontend:8081;
+    proxy_pass        http://localhost:8081;
     proxy_redirect    default;
     proxy_set_header  Upgrade $http_upgrade;
     proxy_set_header  Connection "upgrade";
@@ -14,7 +14,7 @@ server {
   }
 
   location /backend {
-    proxy_pass        http://backend:5000;
+    proxy_pass        http://localhost:5000;
     proxy_redirect    default;
     proxy_set_header  Host $host;
     proxy_set_header  Upgrade $http_upgrade;
