--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,57 +1,55 @@
-version: '3.7'
+version: '2.1'
 
 services:
-  back:
+  flask:
     build:
       context: ./backend
       dockerfile: dockerFlask
     volumes:
-      - './backend:/usr/src/backend'
+      - './backend:/backend'
     ports:
       - 5000:5000
-    environment:
-      - FLASK_CONFIG=development
-      - FLASK_ENV=development
-      - APP_SETTINGS=project.config.DevelopmentConfig
-      - DATABASE_URL=postgres://postgres:postgres@tutorial-db:5432/dev_db
-      - DATABASE_TEST_URL=postgres://postgres:postgres@tutorial-db:5432/test_db
-      - SECRET_KEY=ZQbn05PDeA7v11
+    expose:
+      - 5000
+
     depends_on:
+       db: 
+          condition: service_healthy
+
+    links:
       - db
 
   db:
-    build:
-      context: ./backend/db/database
-      dockerfile: dockerPostgres
-    ports:
-      - 5432:5432
+    image: postgres:13.1
+    healthcheck:
+      test: [ "CMD", "pg_isready", "-q", "-d", "postgres", "-U", "root" ]
+      timeout: 45s
+      interval: 10s
+      retries: 10
+    restart: always
+    user: postgres
     environment:
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-
-  nginx:
-    build:
-      context: ./nginx
-      dockerfile: dockerNginx
-    restart: unless-stopped
+      - APP_DB_USER=root
+      - APP_DB_PASS=root
+      - APP_DB_NAME=cai
+    volumes:
+      - ./backend/db/database:/docker-entrypoint-initdb.d/
     ports:
-      - 8079:8079
-    depends_on:
-      - back
-      - front
-
-  front:
+      - 5432:5432
+    expose:
+      - 5432
+  vue:
     build:
       context: ./frontend
       dockerfile: dockerNuxt
     volumes:
-      - './frontend:/usr/src/frontend'
-      - '/usr/src/frontend/node_modules'
+      - './frontend:/frontend'
+      - '/frontend/node_modules'
     ports:
       - 8081:8081
-    environment:
-      - NODE_ENV=development
-      - REACT_APP_SERVICE_URL=http://localhost:8081
-      - CHOKIDAR_USEPOLLING=true
+    expose: 
+      - 8081
     depends_on:
-      - back
+      - flask
