--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,14 @@
     "lint": "npm run lint:js"
   },
   "dependencies": {
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/auth-next": "^5.0.0-1641800591.39ceedf",
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.15.1",
     "nuxt": "^2.15.7",
     "nuxt-leaflet": "^0.0.27",
     "read-excel-file": "^5.2.25",
+    "sass": "^1.32.13",
     "vuetify": "^2.5.5"
   },
   "devDependencies": {
@@ -26,7 +29,9 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
+    "node-sass": "^5.0.0",
     "prettier": "^2.3.2",
+    "sass-loader": "^10.1.1",
     "webpack": "^4.45.0"
   }
 }
