--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,78 @@
-flask
-flask_sqlalchemy
-flask_marshmallow
-flask_migrate
-flask_cors
-sqlalchemy
-docxtpl
-datetime
-flask_login
-requests
-marshmallow_sqlalchemy
-psycopg2
+alembic==1.7.5
+bcrypt==3.1.7
+blinker==1.4
+certifi==2019.11.28
+chardet==3.0.4
+click==8.0.3
+cryptography==2.8
+DateTime==4.3
+distro==1.4.0
+docxcompose==1.3.4
+docxtpl==0.15.1
+entrypoints==0.3
+et-xmlfile==1.1.0
+fasteners==0.14.1
+Flask==2.0.2
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.3.1
+Flask-Login==0.5.0
+flask-marshmallow==0.14.0
+Flask-Migrate==3.1.0
+Flask-SQLAlchemy==2.5.1
+future==0.18.2
+greenlet==1.1.2
+httplib2==0.14.0
+idna==2.8
+importlib-metadata==4.8.2
+importlib-resources==5.4.0
+inflect==5.3.0
+itsdangerous==2.0.1
+Jinja2==3.0.3
+keyring==18.0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+lxml==4.7.1
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==2.0.1
+marshmallow==3.14.1
+marshmallow-sqlalchemy==0.26.1
+monotonic==1.5
+netifaces==0.10.4
+numpy==1.21.4
+oauthlib==3.1.0
+olefile==0.46
+openpyxl==3.0.9
+pandas==1.3.4
+paramiko==2.6.0
+pexpect==4.6.0
+Pillow==7.0.0
+protobuf==3.6.1
+psycopg2==2.9.2
+psycopg2-binary==2.9.2
+pycairo==1.16.2
+PyJWT==2.3.0
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyRFC3339==1.1
+python-dateutil==2.7.3
+python-docx==0.8.11
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+simplejson==3.16.0
+six==1.14.0
+sqlacodegen==2.3.0
+SQLAlchemy==1.4.27
+urllib3==1.25.8
+wadllib==1.3.3
+Werkzeug==2.0.2
+zipp==3.6.0
+zope.interface==5.4.0
+
